--- a/portfolio.css
+++ b/portfolio.css
@@ -6,4 +6,32 @@ body {
 	margin: 0;
 	background-color: black;
 	color: white;
+	font-family: "Roboto", Sans-serif;
+}
+
+nav {
+	width: 100%;
+	height: 60px;
+	padding: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+nav div {
+	flex: 1;
+	display: flex;
+	justify-content: center;
+}
+
+.navbar {
+	justify-content: flex-start;
+}
+
+.navbar a{
+	padding: 0 20px 0 0;
+}
+
+.request-cv {
+	justify-content: flex-end;
 }
