--- a/portfolio.css
+++ b/portfolio.css
@@ -9,6 +9,11 @@ body {
 	font-family: "Roboto", Sans-serif;
 }
 
+a {
+	text-decoration: none;
+	color: white;
+}
+
 nav {
 	width: 100%;
 	height: 60px;
@@ -91,4 +96,26 @@ main section div {
 
 main section img {
 	margin: 0 auto;
+}
+
+footer {
+	height: 40px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	font-size: 20px;
+}
+
+footer a {
+	padding: 0 3px;
+}
+
+a:visited {
+	color: white;
+}
+
+a:hover {
+	color: DarkGray;
 }
