--- a/portfolio.css
+++ b/portfolio.css
@@ -90,7 +90,7 @@ main {
 main section {
 	width: 500px;
 	margin: 10px;
-	padding: 10px;
+	padding: 10px 30px;
 	background-color: black;
 	display: flex;
 	flex-direction: column;
@@ -125,11 +125,14 @@ footer a {
 @media screen and (max-width: 600px) {
 	nav {
 		flex-wrap: wrap;
-	
+		height: 120px;
 	}
 	.title {
 		order: -1;
 		flex: 100%;
+	}
+	header {
+		justify-content: center;
 	}
 	main section {
 		width: calc(100% - 20px);
