--- a/portfolio.css
+++ b/portfolio.css
@@ -23,11 +23,9 @@ a:hover {
 }
 
 nav {
-	width: 100%;
 	height: 60px;
-	padding: 10px;
+	padding: 0 10px;
 	display: flex;
-	justify-content: center;
 	align-items: center;
 }
 
@@ -50,16 +48,29 @@ nav div {
 }
 
 header {
-	width: 100%;
-	height: 400px;
 	background-image: url("resources/about-background.jpg");
 	background-color: white;
 	background-size: 1920px;
 	background-position: top right;
-	padding-right: 10%;
 	display: flex;
-	justify-content: flex-end;
+	flex-wrap: wrap;
 	align-items: center;
+}
+
+.index header {
+	height: 400px;
+	padding-right: 10%;
+	justify-content: flex-end;
+}
+
+.project-page header {
+	width: 100%;
+	padding: 5%;
+	justify-content: space-between;
+}
+
+.project-page header img {
+	max-width: 80%;
 }
 
 header div {
@@ -70,6 +81,12 @@ header div {
 }
 
 header div h2 {
+	background-color: black;
+	padding: 4px;
+	margin: 0;
+}
+
+header div h3 {
 	background-color: black;
 	padding: 4px;
 	margin: 0;
@@ -110,11 +127,9 @@ main section img {
 
 footer {
 	height: 40px;
-	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	font-size: 20px;
 }
 
@@ -131,8 +146,15 @@ footer a {
 		order: -1;
 		flex: 100%;
 	}
-	header {
+	.index header {
 		justify-content: center;
+	}
+	.project-page header img {
+		width: 100%;
+		max-width:100%;
+	}
+	.project-page header div {
+		width: 100%;
 	}
 	main section {
 		width: calc(100% - 20px);
