--- a/custom.css
+++ b/custom.css
@@ -3,6 +3,26 @@ body {
   padding-bottom: 50px;
 }
 
+.fadeonload {
+  opacity: 0;
+}
+
+.fadein-scroll {
+  opacity: 0;
+  bottom: -300px;
+}
+
+.projects-header {
+  position: sticky;
+  top: 10px;
+  z-index: 100;
+}
+
+.card {
+  max-width: 500px;
+  margin: auto;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
